--- a/compose/Dockerfile-proxy
+++ b/compose/Dockerfile-proxy
@@ -1,5 +1,7 @@
 FROM envoyproxy/envoy-dev:latest
 ADD apisix/core.lua /apisix/core.lua
+COPY apisix/core/ /apisix/core/
+COPY apisix/plugins/ /apisix/plugins/
 COPY compose/envoy.yaml /etc/envoy.yaml
 RUN chmod go+r /etc/envoy.yaml /apisix/core.lua
 CMD /usr/local/bin/envoy -c /etc/envoy.yaml -l debug --service-cluster proxy
